<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LugaresFavoritos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mensaje">Introduce lugar o dirección</string>
    <string name="hintLugar">lugar o dirección</string>
    <string name="btBuscar">Buscar</string>
    <string name="btFavoritos">Favoritos</string>
    <string name="title_activity_favoritos">Favoritos</string>
    <string name="valencia">Valencia</string>
    <string name="madrid">Madrid</string>
    <string name="barcelona">Barcelona</string>
    <string name="manises">Manises</string>
    <string name="title_activity_segunda">Favoritos</string>
    <string name="santander">Santander</string>
    <string name="sansebastian">San Sebastian</string>
    <string name="sevilla">Sevilla</string>
    <string name="alicante">Alicante</string>
    <string name="londres">Londres</string>
    <string name="berlin">Berlin</string>
    <string name="praga">Praga</string>

</resources>
