<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
		<Button
		    android:id="@+id/b1"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="17dp"
		    android:text="@string/valencia" />
	
	    <Button
	        android:id="@+id/b2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/b1"
	        android:layout_centerHorizontal="true"
	        android:text="@string/barcelona" />
    	
    	<Button
    	    android:id="@+id/b3"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/b2"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/madrid" />
    	
    	<Button
    	    android:id="@+id/b4"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/b3"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/manises" />
    	
    	<Button
    	    android:id="@+id/b5"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/b4"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/santander" />
    	
    	<Button
    	    android:id="@+id/b6"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/b5"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/sansebastian" />
    	
    	<Button
    	    android:id="@+id/b7"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/b6"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/sevilla" />
    	
    	<Button
    	    android:id="@+id/b8"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/b7"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/alicante" />
    	
    	<Button
    	    android:id="@+id/b9"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/b8"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/londres" />
	
    	<Button
    	    android:id="@+id/b10"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/b9"
    	    android:layout_centerHorizontal="true"
    	    android:text="@string/berlin" />
        	
    </RelativeLayout>
</ScrollView>